fix contacts layout bugs

--- a/client/stylesheets/base.import.less
+++ b/client/stylesheets/base.import.less
@@ -8,9 +8,12 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  div[data-momentum] {
-  	position: relative;
-  	flex-grow: 1;
+  .g-content {
+    position: relative;
+    flex-grow: 1;
+    div[data-momentum] {
+      flex-grow: 1;
+    }
   }
 }
 
